test/langtools/tools/javac/patterns/UnreachableCasesTest.out
UnreachableCasesTest.java:28:13: compiler.err.pattern.dominated
1 error